syntax = "proto3";

package bot.account;

option java_outer_classname = "AccountManagementDomain";

// VALUE TYPES
message AccountId {
  string id = 1;
}

// EVENTS
message AccountRegistered {
  AccountId id = 1;
  string email = 3;
}

message AccountDisabled {
  string legalId = 2;
}

// STATE
message AccountState {
  AccountId id = 1;
  string email = 2;
}